fixed card sizing on homepage and set max-width to 400px to ensure they don't become too large

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -7,3 +7,6 @@
 .wy-nav-content {
     max-width: none;
 }
+div.card {
+    max-width: 400px;
+}
